OpenAPI 3 spec contains now JobTemplate and JobInfo extensions
